# minecraft-plugin-manager

./: .gitignore  README.md
.github/workflows/: auto-promote.yml  build-test.yml
.lifecycle/: state.yaml.backup
core/backend/: pyproject.toml
core/backend/minecraft_plugin_manager/: __init__.py  api_clients.py  cli.py  config.py  config_example.yaml  config_loader.py  deployment.py  pterodactyl.py  updater.py
core/docs/: AUTOMATION_USAGE.md  CONFIGURATION.md  QUICK_START.md  TEST_RESULTS.md
